--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-core:18.0.2'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
 }
 apply plugin: 'com.google.gms.google-services'
