--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCSxi8VOf5P43MLEJXtQzH8j82KD0nFRDs" />
     </application>
 
 </manifest>
